--- a/index.html
+++ b/index.html
@@ -66,33 +66,43 @@
 
         .container { max-width: 600px; margin: auto; padding: 20px 15px; }
 
-        /* SCROLL VISIBLE Y ELEGANTE */
+        /* CONTENEDOR DEL MENÚ CON FLECHAS */
+        .menu-wrapper {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+            gap: 5px;
+        }
+
+        .scroll-arrow {
+            background: rgba(255,255,255,0.1);
+            color: var(--gold);
+            border: none;
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            cursor: pointer;
+            font-size: 18px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-shrink: 0; /* Evita que se aplasten */
+        }
+        .scroll-arrow:hover { background: rgba(212, 175, 55, 0.2); }
+
+        /* SCROLL OCULTO PERO FUNCIONAL */
         .filter-scroll { 
             display: flex;
             gap: 10px;
             overflow-x: auto; 
             white-space: nowrap; 
-            padding-bottom: 15px; 
-            margin-bottom: 15px;
+            padding-bottom: 5px; 
             -webkit-overflow-scrolling: touch; 
+            scrollbar-width: none; /* Firefox */
+            scroll-behavior: smooth; /* Movimiento suave */
+            flex-grow: 1; /* Ocupa el espacio disponible */
         }
-
-        /* ESTILO DE LA BARRA DE DESPLAZAMIENTO (DORADA) */
-        .filter-scroll::-webkit-scrollbar {
-            height: 6px; /* Altura de la barra */
-            display: block; /* Asegura que se vea */
-        }
-        .filter-scroll::-webkit-scrollbar-track {
-            background: #222; /* Fondo oscuro del riel */
-            border-radius: 10px;
-        }
-        .filter-scroll::-webkit-scrollbar-thumb {
-            background: var(--gold); /* Color dorado del botón */
-            border-radius: 10px;
-        }
-        .filter-scroll::-webkit-scrollbar-thumb:hover {
-            background: var(--dark-gold); /* Oscurece al tocarlo */
-        }
+        .filter-scroll::-webkit-scrollbar { display: none; } /* Chrome/Safari */
 
         .filter-btn { 
             flex: 0 0 auto; 
@@ -101,7 +111,7 @@
             color: #888; 
             padding: 10px 20px; 
             border-radius: 30px; 
-            font-size: 13px; 
+            font-size: 12px; 
             cursor: pointer; 
             transition: 0.3s;
             text-transform: uppercase;
@@ -216,13 +226,16 @@
             <p id="status-msg" style="font-size:12px; color:#888; margin-top:10px;"></p>
         </div>
 
-        <div class="filter-scroll">
-            <button class="filter-btn active" onclick="filtrar('Todo')">Todo</button>
-            <button class="filter-btn" onclick="filtrar('JAZZTABUENO')">🎷 JAZZTABUENO</button>
-            <button class="filter-btn" onclick="filtrar('STUDIO79')">🎧 STUDIO 79</button>
-            <button class="filter-btn" onclick="filtrar('SALSA BRAVA')">🔥 SALSA BRAVA</button>
-            <button class="filter-btn" onclick="filtrar('OLD SCHOOL')">📻 OLD SCHOOL</button>
-        </div>
+        <div class="menu-wrapper">
+            <button class="scroll-arrow" onclick="moverMenu(-1)">&#10094;</button> <div class="filter-scroll" id="menuScroll">
+                <button class="filter-btn active" onclick="filtrar('Todo')">Todo</button>
+                <button class="filter-btn" onclick="filtrar('JAZZTABUENO')">🎷 JAZZTABUENO</button>
+                <button class="filter-btn" onclick="filtrar('STUDIO79')">🎧 STUDIO 79</button>
+                <button class="filter-btn" onclick="filtrar('SALSA BRAVA')">🔥 SALSA BRAVA</button>
+                <button class="filter-btn" onclick="filtrar('OLD SCHOOL')">📻 OLD SCHOOL</button>
+            </div>
+            
+            <button class="scroll-arrow" onclick="moverMenu(1)">&#10095;</button> </div>
 
         <div id="radio-feed"></div>
     </div>
@@ -259,6 +272,13 @@
             localStorage.setItem('jazz_auth', val);
             location.reload();
         }
+    };
+
+    // --- FUNCION PARA MOVER EL MENÚ ---
+    window.moverMenu = (direccion) => {
+        const menu = document.getElementById('menuScroll');
+        const cantidad = 200; // Cuánto se mueve en pixeles
+        menu.scrollLeft += (cantidad * direccion);
     };
 
     window.salirDeApp = () => {
