--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         .is-playing .btn-play-card { background: rgba(0, 0, 0, 0.8) !important; border: 3px solid var(--gold); }
         .is-playing .btn-play-card::before { content: ''; width: 6px; height: 26px; background: var(--gold); box-shadow: 16px 0 0 var(--gold); margin-right: 16px; margin-left: 0; }
 
-        /* REPRODUCTOR V10.9 */
+        /* REPRODUCTOR V11.0 */
         #global-player { position: fixed; bottom: 0; left: 0; width: 100%; background: #080808; border-top: 2px solid var(--gold); padding: 18px 20px; display: none; z-index: 1000; box-shadow: 0 -20px 50px rgba(0,0,0,1); }
         .player-top { display: flex; align-items: center; gap: 15px; margin-bottom: 15px; }
         .p-vinyl { width: 55px; height: 55px; border-radius: 50%; border: 2.5px solid var(--gold); background-size: cover; animation: rotateVinyl 4s linear infinite; animation-play-state: paused; }
@@ -63,7 +63,6 @@
         .tool-row { display: flex; justify-content: space-between; align-items: center; border-top: 1px solid #222; padding-top: 15px; margin-top: 5px; gap: 8px; }
         .btn-tool { flex: 1; background: #1a1a1a; border: 1px solid #333; color: #fff; padding: 10px 5px; border-radius: 10px; font-size: 9px; font-weight: 800; cursor: pointer; transition: all 0.3s; }
         
-        /* ESTADO ACTIVO CAST */
         .is-casting { background: var(--gold) !important; color: black !important; border-color: white !important; }
 
         @keyframes rotateVinyl { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
@@ -114,8 +113,8 @@
     </div>
     <div class="seek-container"><input type="range" id="seek-bar" value="0" min="0" step="1"></div>
     <div class="tool-row">
-        <button id="btn-cast-v9" onclick="window.gestionarTransmisionV9()" class="btn-tool" style="border-color: var(--gold); color: var(--gold);">📡 CONECTAR TV</button>
-        <button onclick="window.forzarRefrescoImagen()" class="btn-tool" style="border-color: #00ff00; color: #00ff00;">🖼️ REFRESCAR TV</button>
+        <button id="btn-cast-v11" onclick="window.gestionarTransmisionV11()" class="btn-tool" style="border-color: var(--gold); color: var(--gold);">📡 CONECTAR TV</button>
+        <button onclick="window.forzarArteTV()" class="btn-tool" style="border-color: #00ff00; color: #00ff00;">🖼️ REFRESCAR TV</button>
         <button onclick="window.cambiarVelocidad()" id="btn-speed" class="btn-tool">1.0x</button>
         <button onclick="window.toggleMute()" id="btn-mute" class="btn-tool">🔊 VOL</button>
     </div>
@@ -128,7 +127,7 @@
     const media = document.getElementById('main-media');
     const seekBar = document.getElementById('seek-bar');
     const timeDisplay = document.getElementById('p-time-display');
-    const castBtn = document.getElementById('btn-cast-v9');
+    const castBtn = document.getElementById('btn-cast-v11');
     let programas = []; let idActual = null; let filtroActivo = 'Todo';
 
     window.checkLogin = () => {
@@ -166,7 +165,7 @@
         });
     }
 
-    function syncSession(titulo, prog, img) {
+    function syncMetadata(titulo, prog, img) {
         if ('mediaSession' in navigator) {
             navigator.mediaSession.metadata = new MediaMetadata({
                 title: titulo, artist: prog, album: 'Jazztabueno Productions',
@@ -186,33 +185,42 @@
             document.getElementById('global-player').style.display = 'block';
             media.src = url; 
             media.setAttribute('poster', artworkUrl);
-            syncSession(titulo, prog, artworkUrl);
-            media.play();
+            syncMetadata(titulo, prog, artworkUrl);
+            media.play().then(() => {
+                // Ráfaga de 3 intentos para forzar la imagen en Onn TV
+                setTimeout(() => syncMetadata(titulo, prog, artworkUrl), 1000);
+                setTimeout(() => syncMetadata(titulo, prog, artworkUrl), 3000);
+            });
         }
         render();
     };
 
     window.togglePlay = () => { if (media.paused) media.play(); else media.pause(); render(); };
     
-    // --- LÓGICA DE TRANSMISIÓN REFORZADA V10.9 ---
-    window.gestionarTransmisionV9 = () => { 
+    // --- LÓGICA DE TRANSMISIÓN SINCRONIZADA V11.0 ---
+    window.gestionarTransmisionV11 = () => { 
         media.style.display = (media.style.display === 'block') ? 'none' : 'block';
         if(media.remotePlayback) {
             media.remotePlayback.prompt().then(() => {
+                // Al abrir el menú, el botón brilla para indicar espera
                 castBtn.classList.add('is-casting');
-            }).catch(() => {});
+            }).catch(() => {
+                castBtn.classList.remove('is-casting');
+            });
         }
     };
 
-    window.forzarRefrescoImagen = () => {
+    window.forzarArteTV = () => {
         if(idActual) {
             const p = programas.find(x => x.id === idActual);
-            if(p) syncSession(p.titulo, p.programa, p.imagenUrl);
-            alert("📡 Señal de imagen re-enviada al televisor.");
+            if(p) {
+                syncMetadata(p.titulo, p.programa, p.imagenUrl);
+                alert("📡 Imagen re-enviada. Revisa tu Onn TV.");
+            }
         }
     };
 
-    // Sensor de limpieza de icono
+    // Sensor de Estado Real: Limpia el color si se desconecta
     setInterval(() => {
         if (media.remotePlayback && media.remotePlayback.state === 'connected') {
             castBtn.classList.add('is-casting');
