--- a/index.html
+++ b/index.html
@@ -19,63 +19,66 @@
         #login-screen { position: fixed; inset: 0; background: black; z-index: 2000; display: flex; align-items: center; justify-content: center; }
         .login-card { width: 85%; max-width: 330px; text-align: center; background: #111; padding: 40px 30px; border-radius: 25px; border: 1px solid #222; }
         .login-card input { width: 100%; padding: 15px; margin-bottom: 25px; background: #222; border: 1px solid var(--gold); color: white; border-radius: 12px; text-align: center; font-size: 16px; }
-        .btn-gold-tico { display: block !important; width: 100% !important; background: linear-gradient(145deg, #d4af37, #b8962d) !important; color: black !important; border: none !important; padding: 18px !important; border-radius: 50px !important; font-weight: 800; text-transform: uppercase; cursor: pointer; box-shadow: 0 10px 30px rgba(212,175,55,0.3) !important; }
+        .btn-gold-tico { display: block !important; width: 100% !important; background: linear-gradient(145deg, #d4af37, #b8962d) !important; color: black !important; border: none !important; padding: 18px !important; border-radius: 50px !important; font-weight: 800; text-transform: uppercase; cursor: pointer; }
 
-        header { background: rgba(0,0,0,0.98); padding: 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #222; z-index: 100; }
-        .header-logo { width: 40px; height: 40px; border-radius: 8px; }
-        .brand-title { color: var(--gold); font-family: 'Playfair Display', serif; font-size: 13px; text-transform: uppercase; }
-        .btn-exit { background: transparent; border: 1.5px solid var(--gold); color: white; font-size: 10px; padding: 6px 14px; border-radius: 6px; font-weight: 800; cursor: pointer; }
+        header { background: rgba(0,0,0,0.98); padding: 12px 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #222; z-index: 100; }
+        .header-logo { width: 38px; height: 38px; border-radius: 8px; }
+        .brand-title { color: var(--gold); font-family: 'Playfair Display', serif; font-size: 12px; text-transform: uppercase; }
+        .btn-exit { background: transparent; border: 1.5px solid var(--gold); color: white; font-size: 10px; padding: 6px 12px; border-radius: 6px; font-weight: 800; cursor: pointer; }
 
         #app-content { flex: 1; overflow-y: auto; padding-bottom: 280px; }
         .container { max-width: 550px; margin: auto; padding: 15px; }
 
-        /* CATEGORÍAS CUADRADAS CONTAIN */
-        .channels-container { display: flex; gap: 15px; margin-bottom: 25px; overflow-x: auto; padding: 10px 5px; scrollbar-width: none; }
-        .channel-item { text-align: center; opacity: 0.4; transition: 0.3s; min-width: 75px; cursor: pointer; }
-        .channel-item.active { opacity: 1; transform: scale(1.05); }
-        .channel-logo { width: 70px; height: 70px; border-radius: 12px; border: 2px solid #333; margin-bottom: 8px; background: #000; object-fit: contain; padding: 4px; }
-        .active .channel-logo { border-color: var(--gold); box-shadow: 0 0 15px rgba(212,175,55,0.3); }
-        .channel-name { font-size: 9px; color: #888; font-weight: 800; text-transform: uppercase; display: block; white-space: nowrap; }
+        /* CATEGORÍAS COMPACTAS V11.1 */
+        .channels-container { display: flex; gap: 12px; margin-bottom: 20px; overflow-x: auto; padding: 10px 5px; scrollbar-width: none; }
+        .channel-item { text-align: center; opacity: 0.5; transition: 0.3s; min-width: 70px; cursor: pointer; }
+        .channel-item.active { opacity: 1; transform: scale(1.02); }
+        .channel-logo { width: 62px; height: 62px; border-radius: 10px; border: 2px solid #333; margin-bottom: 6px; background: #000; object-fit: contain; padding: 3px; }
+        .active .channel-logo { border-color: var(--gold); box-shadow: 0 0 12px rgba(212,175,55,0.4); }
+        .channel-name { font-size: 8.5px; color: #999; font-weight: 800; text-transform: uppercase; display: block; }
 
         /* TARJETAS */
-        .episode-card { background: var(--card); border-radius: 22px; margin-bottom: 35px; overflow: hidden; border: 1px solid #222; position: relative; }
-        .cover-art { width: 100%; height: 220px; background-size: cover; background-position: center; position: relative; }
-        .cover-overlay { position: absolute; inset: 0; background: rgba(0,0,0,0.35); display: flex; align-items: center; justify-content: center; }
-        .btn-play-card { background: var(--gold); border: none; width: 70px; height: 70px; border-radius: 50%; cursor: pointer; display: flex; align-items: center; justify-content: center; }
-        .btn-play-card::before { content: '▶'; font-size: 28px; color: black; margin-left: 6px; }
-        .is-playing .btn-play-card { background: rgba(0, 0, 0, 0.8) !important; border: 3px solid var(--gold); }
-        .is-playing .btn-play-card::before { content: ''; width: 6px; height: 26px; background: var(--gold); box-shadow: 16px 0 0 var(--gold); margin-right: 16px; margin-left: 0; }
+        .episode-card { background: var(--card); border-radius: 20px; margin-bottom: 30px; overflow: hidden; border: 1px solid #222; position: relative; }
+        .cover-art { width: 100%; height: 210px; background-size: cover; background-position: center; position: relative; }
+        .cover-overlay { position: absolute; inset: 0; background: rgba(0,0,0,0.3); display: flex; align-items: center; justify-content: center; }
+        .btn-play-card { background: var(--gold); border: none; width: 65px; height: 65px; border-radius: 50%; cursor: pointer; display: flex; align-items: center; justify-content: center; }
+        .btn-play-card::before { content: '▶'; font-size: 26px; color: black; margin-left: 5px; }
+        .is-playing .btn-play-card { background: rgba(0,0,0,0.85) !important; border: 2.5px solid var(--gold); }
+        .is-playing .btn-play-card::before { content: '||'; font-family: Arial, sans-serif; font-weight: bold; color: var(--gold); margin-left: 0; }
 
-        /* REPRODUCTOR V11.0 */
-        #global-player { position: fixed; bottom: 0; left: 0; width: 100%; background: #080808; border-top: 2px solid var(--gold); padding: 18px 20px; display: none; z-index: 1000; box-shadow: 0 -20px 50px rgba(0,0,0,1); }
-        .player-top { display: flex; align-items: center; gap: 15px; margin-bottom: 15px; }
-        .p-vinyl { width: 55px; height: 55px; border-radius: 50%; border: 2.5px solid var(--gold); background-size: cover; animation: rotateVinyl 4s linear infinite; animation-play-state: paused; }
+        .episode-info { padding: 20px; }
+        .program-tag { display: inline-block; font-size: 8.5px; color: black; padding: 4px 12px; border-radius: 50px; background: var(--gold); font-weight: 800; margin-bottom: 10px; }
+        .episode-title { font-size: 19px; margin: 0; font-weight: 700; color: white; line-height: 1.2; }
+
+        /* REPRODUCTOR */
+        #global-player { position: fixed; bottom: 0; left: 0; width: 100%; background: #080808; border-top: 2px solid var(--gold); padding: 15px 20px; display: none; z-index: 1000; }
+        .player-top { display: flex; align-items: center; gap: 12px; margin-bottom: 12px; }
+        .p-vinyl { width: 50px; height: 50px; border-radius: 50%; border: 2px solid var(--gold); background-size: cover; animation: rotateVinyl 4s linear infinite; animation-play-state: paused; }
         .playing .p-vinyl { animation-play-state: running; }
         .p-info { flex: 1; overflow: hidden; }
-        .p-info h4 { margin: 0; font-size: 14px; color: #fff; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-        .p-time { font-size: 11px; color: var(--gold); font-weight: 900; margin-top: 5px; }
+        .p-info h4 { margin: 0; font-size: 13px; color: #fff; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
+        .p-time { font-size: 10px; color: var(--gold); font-weight: 900; margin-top: 4px; }
 
-        .btn-p-main { background: none; border: none; color: var(--gold); font-size: 32px; cursor: pointer; padding: 5px; }
-        .seek-container { width: 100%; padding: 8px 0; }
-        #seek-bar { width: 100%; -webkit-appearance: none; background: #222; height: 6px; border-radius: 3px; outline: none; }
-        #seek-bar::-webkit-slider-thumb { -webkit-appearance: none; width: 20px; height: 20px; background: var(--gold); border-radius: 50%; cursor: pointer; border: 3px solid #000; }
+        .btn-p-main { background: none; border: none; color: var(--gold); font-size: 30px; cursor: pointer; }
+        .seek-container { width: 100%; padding: 5px 0; }
+        #seek-bar { width: 100%; -webkit-appearance: none; background: #222; height: 5px; border-radius: 3px; }
+        #seek-bar::-webkit-slider-thumb { -webkit-appearance: none; width: 18px; height: 18px; background: var(--gold); border-radius: 50%; border: 2px solid #000; }
 
-        .tool-row { display: flex; justify-content: space-between; align-items: center; border-top: 1px solid #222; padding-top: 15px; margin-top: 5px; gap: 8px; }
-        .btn-tool { flex: 1; background: #1a1a1a; border: 1px solid #333; color: #fff; padding: 10px 5px; border-radius: 10px; font-size: 9px; font-weight: 800; cursor: pointer; transition: all 0.3s; }
-        
-        .is-casting { background: var(--gold) !important; color: black !important; border-color: white !important; }
+        .tool-row { display: flex; justify-content: space-between; align-items: center; border-top: 1px solid #222; padding-top: 12px; margin-top: 5px; gap: 8px; }
+        .btn-tool { flex: 1; background: #1a1a1a; border: 1px solid #333; color: #fff; padding: 9px 5px; border-radius: 8px; font-size: 8.5px; font-weight: 800; cursor: pointer; transition: 0.2s; }
+        .is-casting { background: var(--gold) !important; color: black !important; }
 
         @keyframes rotateVinyl { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
-        #main-media { width: 100%; height: 50px; display: none; background: #000; }
+        #main-media { width: 1px; height: 1px; display: none; opacity: 0; }
     </style>
 </head>
 <body>
 
 <div id="login-screen">
     <div class="login-card">
-        <img src="logo.png" style="width:100px; margin-bottom:20px;">
+        <img src="logo.png" style="width:90px; margin-bottom:20px;">
         <h2 style="color:var(--gold); font-family:'Playfair Display'; margin-bottom: 25px;">JAZZTABUENO</h2>
-        <input type="password" id="passInput" placeholder="Clave de Director">
+        <input type="password" id="passInput" placeholder="Clave">
         <button onclick="checkLogin()" class="btn-gold-tico">ENTRAR ▶</button>
     </div>
 </div>
@@ -86,7 +89,7 @@
             <img src="logo.png" class="header-logo">
             <div class="brand-title">Jazztabueno<br>Productions</div>
         </div>
-        <button onclick="window.reiniciarTodo()" class="btn-exit">SALIR</button>
+        <button onclick="window.resetTotal()" class="btn-exit">SALIR</button>
     </header>
 
     <div class="container">
@@ -102,21 +105,20 @@
 </div>
 
 <div id="global-player">
-    <video id="main-media" controls controlsList="nodownload" playsinline crossorigin="anonymous"></video>
+    <video id="main-media" playsinline crossorigin="anonymous"></video>
     <div class="player-top">
         <div id="p-vinyl" class="p-vinyl" style="background-image: url('logo.png');"></div>
         <div class="p-info"><h4 id="p-title">...</h4><div id="p-time-display" class="p-time">00:00 / 00:00</div></div>
         <div style="display:flex; align-items:center;">
             <button onclick="window.togglePlay()" id="p-play-btn" class="btn-p-main">▶</button>
-            <button onclick="window.cerrarPlayer()" class="btn-p-main" style="color:#555; font-size:26px; margin-left:10px;">×</button>
+            <button onclick="window.cerrarPlayer()" class="btn-p-main" style="color:#444; font-size:24px; margin-left:12px;">×</button>
         </div>
     </div>
     <div class="seek-container"><input type="range" id="seek-bar" value="0" min="0" step="1"></div>
     <div class="tool-row">
-        <button id="btn-cast-v11" onclick="window.gestionarTransmisionV11()" class="btn-tool" style="border-color: var(--gold); color: var(--gold);">📡 CONECTAR TV</button>
-        <button onclick="window.forzarArteTV()" class="btn-tool" style="border-color: #00ff00; color: #00ff00;">🖼️ REFRESCAR TV</button>
-        <button onclick="window.cambiarVelocidad()" id="btn-speed" class="btn-tool">1.0x</button>
-        <button onclick="window.toggleMute()" id="btn-mute" class="btn-tool">🔊 VOL</button>
+        <button id="cast-btn-v11" onclick="window.activarCastV11()" class="btn-tool" style="border-color: var(--gold); color: var(--gold);">📡 CONECTAR TV</button>
+        <button onclick="window.refreshVisuals()" class="btn-tool" style="border-color: #00ff00; color: #00ff00;">🖼️ REFRESCAR TV</button>
+        <button onclick="window.reiniciarSesion()" class="btn-tool" style="border-color: #ff4444; color: #ff4444;">♻️ RESET UI</button>
     </div>
 </div>
 
@@ -127,7 +129,7 @@
     const media = document.getElementById('main-media');
     const seekBar = document.getElementById('seek-bar');
     const timeDisplay = document.getElementById('p-time-display');
-    const castBtn = document.getElementById('btn-cast-v11');
+    const castBtn = document.getElementById('cast-btn-v11');
     let programas = []; let idActual = null; let filtroActivo = 'Todo';
 
     window.checkLogin = () => {
@@ -165,7 +167,7 @@
         });
     }
 
-    function syncMetadata(titulo, prog, img) {
+    function pushToCast(titulo, prog, img) {
         if ('mediaSession' in navigator) {
             navigator.mediaSession.metadata = new MediaMetadata({
                 title: titulo, artist: prog, album: 'Jazztabueno Productions',
@@ -185,11 +187,9 @@
             document.getElementById('global-player').style.display = 'block';
             media.src = url; 
             media.setAttribute('poster', artworkUrl);
-            syncMetadata(titulo, prog, artworkUrl);
+            pushToCast(titulo, prog, artworkUrl);
             media.play().then(() => {
-                // Ráfaga de 3 intentos para forzar la imagen en Onn TV
-                setTimeout(() => syncMetadata(titulo, prog, artworkUrl), 1000);
-                setTimeout(() => syncMetadata(titulo, prog, artworkUrl), 3000);
+                setTimeout(() => pushToCast(titulo, prog, artworkUrl), 2000);
             });
         }
         render();
@@ -197,30 +197,29 @@
 
     window.togglePlay = () => { if (media.paused) media.play(); else media.pause(); render(); };
     
-    // --- LÓGICA DE TRANSMISIÓN SINCRONIZADA V11.0 ---
-    window.gestionarTransmisionV11 = () => { 
-        media.style.display = (media.style.display === 'block') ? 'none' : 'block';
+    window.activarCastV11 = () => { 
         if(media.remotePlayback) {
-            media.remotePlayback.prompt().then(() => {
-                // Al abrir el menú, el botón brilla para indicar espera
-                castBtn.classList.add('is-casting');
-            }).catch(() => {
-                castBtn.classList.remove('is-casting');
-            });
+            media.remotePlayback.prompt().then(() => { castBtn.classList.add('is-casting'); }).catch(() => {});
         }
     };
 
-    window.forzarArteTV = () => {
+    window.refreshVisuals = () => {
         if(idActual) {
             const p = programas.find(x => x.id === idActual);
-            if(p) {
-                syncMetadata(p.titulo, p.programa, p.imagenUrl);
-                alert("📡 Imagen re-enviada. Revisa tu Onn TV.");
-            }
+            if(p) pushToCast(p.titulo, p.programa, p.imagenUrl);
+            alert("📡 Refrescando imagen en TV...");
         }
     };
 
-    // Sensor de Estado Real: Limpia el color si se desconecta
+    // BOTÓN DE EMERGENCIA PARA EL ICONO OSCURO
+    window.reiniciarSesion = () => {
+        castBtn.classList.remove('is-casting');
+        media.pause();
+        media.src = "";
+        alert("♻️ Interfaz Reiniciada. Si el icono seguía oscuro, debería haberse limpiado.");
+        render();
+    };
+
     setInterval(() => {
         if (media.remotePlayback && media.remotePlayback.state === 'connected') {
             castBtn.classList.add('is-casting');
@@ -229,7 +228,7 @@
             castBtn.classList.remove('is-casting');
             castBtn.innerText = "📡 CONECTAR TV";
         }
-    }, 2000);
+    }, 2500);
 
     window.filtrar = (cat, el) => {
         filtroActivo = cat;
@@ -238,7 +237,7 @@
         render();
     };
 
-    window.reiniciarTodo = () => { localStorage.clear(); location.reload(); };
+    window.resetTotal = () => { localStorage.clear(); location.reload(); };
     window.cambiarVelocidad = () => { const speeds = [1.0, 1.25, 1.5, 2.0]; media.playbackRate = speeds[(speeds.indexOf(media.playbackRate) + 1) % speeds.length]; document.getElementById('btn-speed').innerText = media.playbackRate + "x"; };
     window.toggleMute = () => { media.muted = !media.muted; document.getElementById('btn-mute').innerText = media.muted ? "🔇 MUTE" : "🔊 VOL"; };
 
@@ -247,7 +246,7 @@
     media.onpause = () => { document.getElementById('global-player').classList.remove('playing'); document.getElementById('p-play-btn').innerText = '▶'; render(); };
     media.ontimeupdate = () => { if(idActual) { seekBar.value = Math.floor(media.currentTime); timeDisplay.innerText = formatTime(media.currentTime) + " / " + formatTime(media.duration); } };
     seekBar.oninput = () => { media.currentTime = seekBar.value; };
-    window.cerrarPlayer = () => { media.pause(); document.getElementById('global-player').style.display = 'none'; media.style.display = 'none'; idActual = null; render(); };
+    window.cerrarPlayer = () => { media.pause(); document.getElementById('global-player').style.display = 'none'; idActual = null; render(); };
     function formatTime(s) { if (isNaN(s)) return "00:00"; const h = Math.floor(s / 3600); const m = Math.floor((s % 3600) / 60); const sec = Math.floor(s % 60); return (h > 0 ? h + ":" : "") + (m < 10 ? "0" + m : m) + ":" + (sec < 10 ? "0" + sec : sec); }
 </script>
 </body>
