--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         #app-content { flex: 1; overflow-y: auto; padding-bottom: 280px; }
         .container { max-width: 550px; margin: auto; padding: 15px; }
 
-        /* --- CATEGORÍAS V12.1 (AJUSTE FIJO SIN SCROLL) --- */
+        /* --- CATEGORÍAS V12.2 (TODOS CENTRADOS) --- */
         .channels-container { 
             display: grid; 
-            grid-template-columns: repeat(5, 1fr); /* 5 columnas iguales */
+            grid-template-columns: repeat(5, 1fr); 
             gap: 5px; 
             margin-bottom: 25px; 
             padding: 10px 0; 
@@ -51,10 +51,6 @@
         .btn-play-card::before { content: '▶'; font-size: 26px; color: black; margin-left: 5px; }
         .is-playing .btn-play-card { background: rgba(0,0,0,0.85) !important; border: 2.5px solid var(--gold); }
         .is-playing .btn-play-card::before { content: '||'; font-family: Arial; font-weight: bold; color: var(--gold); margin-left: 0; }
-
-        .episode-info { padding: 20px; }
-        .program-tag { display: inline-block; font-size: 8px; color: black; padding: 4px 12px; border-radius: 50px; background: var(--gold); font-weight: 800; margin-bottom: 10px; }
-        .episode-title { font-size: 18px; font-weight: 700; color: white; line-height: 1.2; }
 
         /* REPRODUCTOR */
         #global-player { position: fixed; bottom: 0; left: 0; width: 100%; background: #080808; border-top: 2px solid var(--gold); padding: 15px 20px; display: none; z-index: 1000; }
@@ -82,7 +78,7 @@
     <div class="login-card">
         <img src="logo.png" style="width:90px; margin-bottom:20px;">
         <h2 style="color:var(--gold); font-family:'Playfair Display';">JAZZTABUENO</h2>
-        <input type="password" id="passInput" placeholder="Clave de Director">
+        <input type="password" id="passInput" placeholder="Introduce Clave">
         <button onclick="checkLogin()" class="btn-gold-tico">ENTRAR ▶</button>
     </div>
 </div>
@@ -120,9 +116,9 @@
     </div>
     <div class="seek-container"><input type="range" id="seek-bar" value="0" min="0" step="1"></div>
     <div class="tool-row">
-        <button id="btn-cast-121" onclick="window.activarCastV121()" class="btn-tool" style="border-color: var(--gold); color: var(--gold);">📡 TRANSMITIR TV</button>
-        <button onclick="window.refrescarArteSolo()" class="btn-tool" style="border-color: #00ff00; color: #00ff00;">🖼️ REFRESCAR TV</button>
-        <button onclick="window.resetUI()" class="btn-tool" style="border-color: #ff4444; color: #ff4444;">♻️ RESET UI</button>
+        <button id="btn-cast-122" onclick="window.lanzarCastV122()" class="btn-tool" style="border-color: var(--gold); color: var(--gold);">📡 TRANSMITIR TV</button>
+        <button onclick="window.refrescarSoloImagen()" class="btn-tool" style="border-color: #00ff00; color: #00ff00;">🖼️ REFRESCAR TV</button>
+        <button onclick="window.limpiarTodo()" class="btn-tool" style="border-color: #ff4444; color: #ff4444;">♻️ RESET UI</button>
     </div>
 </div>
 
@@ -133,7 +129,7 @@
     const media = document.getElementById('main-media');
     const seekBar = document.getElementById('seek-bar');
     const timeDisplay = document.getElementById('p-time-display');
-    const castBtn = document.getElementById('btn-cast-121');
+    const castBtn = document.getElementById('btn-cast-122');
     let programas = []; let idActual = null; let filtroActivo = 'Todo';
 
     window.checkLogin = () => {
@@ -171,11 +167,14 @@
         });
     }
 
-    function syncMetadataV121(titulo, prog, img) {
+    function syncTV(titulo, prog, img) {
         if ('mediaSession' in navigator) {
             navigator.mediaSession.metadata = new MediaMetadata({
                 title: titulo, artist: prog, album: 'Jazztabueno Productions',
-                artwork: [{ src: img, sizes: '512x512', type: 'image/png' }]
+                artwork: [
+                    { src: img, sizes: '96x96', type: 'image/png' },
+                    { src: img, sizes: '512x512', type: 'image/png' }
+                ]
             });
         }
     }
@@ -183,15 +182,15 @@
     window.gestionarReproduccion = (id, url, titulo, prog, img) => {
         if (idActual === id) { window.togglePlay(); } 
         else {
-            idActual = id; media.src = url; 
+            idActual = id; 
+            media.src = url; 
             document.getElementById('p-title').innerText = titulo;
             document.getElementById('p-vinyl').style.backgroundImage = `url('${img || 'logo.png'}')`;
             document.getElementById('global-player').style.display = 'block';
-            syncMetadataV121(titulo, prog, img || 'logo.png');
+            syncTV(titulo, prog, img || 'logo.png');
             media.play().then(() => {
-                // Ráfaga de posters para forzar la imagen en Onn TV
-                setTimeout(() => syncMetadataV121(titulo, prog, img || 'logo.png'), 1500);
-                setTimeout(() => syncMetadataV121(titulo, prog, img || 'logo.png'), 4000);
+                // Doble ráfaga para forzar imagen en Onn TV
+                setTimeout(() => syncTV(titulo, prog, img || 'logo.png'), 2000);
             });
         }
         render();
@@ -199,30 +198,27 @@
 
     window.togglePlay = () => { if (media.paused) media.play(); else media.pause(); render(); };
     
-    // --- NUEVO MOTOR DE TRANSMISIÓN DIRECTO V12.1 ---
-    window.activarCastV121 = () => { 
+    // --- LÓGICA DE TRANSMISIÓN V12.2 ---
+    window.lanzarCastV122 = () => { 
         if(media.remotePlayback) {
-            // Un toque directo para que Chrome no lo bloquee
-            media.remotePlayback.prompt().then(() => {
-                console.log("Cast iniciado");
-            }).catch(() => {
-                alert("📡 Director: Chrome bloqueó el menú. Toca los 3 puntos de Chrome y selecciona 'Transmitir'.");
+            media.remotePlayback.prompt().catch(() => {
+                alert("📡 Director: Chrome bloqueó el acceso. Intenta darle Play primero y luego a este botón.");
             });
         }
     };
 
-    window.refrescarArteSolo = () => {
+    window.refrescarSoloImagen = () => {
         if(idActual) {
             const p = programas.find(x => x.id === idActual);
             if(p) {
-                // Solo refresca metadatos visuales
-                syncMetadataV121(p.titulo, p.programa, p.imagenUrl);
-                alert("📡 Imagen re-enviada. Música continua.");
+                // ESTO ES LO NUEVO: No toca el audio, solo refresca el dibujo
+                syncTV(p.titulo, p.programa, p.imagenUrl);
+                alert("📡 Señal de imagen re-enviada.");
             }
         }
     };
 
-    window.resetUI = () => { media.pause(); media.src = ""; render(); alert("♻️ UI Reiniciada."); };
+    window.limpiarTodo = () => { media.pause(); media.src = ""; render(); alert("♻️ UI Limpia."); };
 
     setInterval(() => {
         if (media.remotePlayback && media.remotePlayback.state === 'connected') {
@@ -230,7 +226,7 @@
         } else {
             castBtn.style.background = "#1a1a1a"; castBtn.style.color = "#fff"; castBtn.innerText = "📡 TRANSMITIR TV";
         }
-    }, 2500);
+    }, 2000);
 
     window.filtrar = (cat, el) => {
         filtroActivo = cat;
