--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
 
     <style>
-        /* COLOR BRONCE MATE - ADIÓS AL AMARILLO NEÓN */
+        /* COLOR BRONCE MATE - ELEGANTE PARA MÓVIL */
         :root { --gold: #a68a44; --bg: #050505; --card: #121212; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
         
@@ -29,7 +29,7 @@
 
         .container { max-width: 550px; margin: auto; padding: 15px; padding-bottom: 280px; }
 
-        /* --- DISEÑO DEL PANEL DJ CORREGIDO --- */
+        /* PANEL DJ CÓMODO Y ESPACIOSO */
         #admin-panel { 
             display: none; 
             background: #111; 
@@ -41,50 +41,52 @@
         }
         .admin-row { display: flex; gap: 10px; margin-bottom: 12px; }
         .input-box, .select-box { 
-            flex: 1; 
-            width: 100%; 
-            padding: 14px; 
-            background: #000; 
-            border: 1px solid #333; 
-            color: white; 
-            border-radius: 10px; 
-            font-size: 14px;
+            flex: 1; width: 100%; padding: 14px; background: #000; border: 1px solid #333; color: white; border-radius: 10px; font-size: 14px;
         }
         .text-area { 
-            width: 100%; 
-            height: 180px; /* MUCHO MÁS GRANDE PARA EL SETLIST */
-            padding: 14px; 
-            background: #000; 
-            border: 1px solid var(--gold); 
-            color: white; 
-            border-radius: 10px; 
-            font-size: 14px; 
-            resize: none;
-            margin-bottom: 15px;
-            font-family: inherit;
+            width: 100%; height: 180px; padding: 14px; background: #000; border: 1px solid var(--gold); color: white; border-radius: 10px; font-size: 14px; resize: none; margin-bottom: 15px; font-family: inherit;
         }
 
-        /* CANALES ESTABLES */
-        .channels-container { display: grid !important; grid-template-columns: repeat(5, 1fr) !important; gap: 8px; margin-bottom: 25px; padding: 10px 0; width: 100%; }
-        .channel-item { text-align: center; opacity: 0.9; transition: 0.3s; cursor: pointer; }
+        /* --- CANALES: ALINEACIÓN LÁSER --- */
+        .channels-container {
+            display: grid !important;
+            grid-template-columns: repeat(5, 1fr) !important;
+            gap: 8px;
+            margin-bottom: 25px;
+            padding: 10px 0;
+            width: 100%;
+        }
+        .channel-item {
+            /* Usamos Flexbox para un centrado perfecto en columna */
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Centra horizontalmente */
+            justify-content: flex-start;
+            opacity: 0.9;
+            transition: 0.3s;
+            cursor: pointer;
+        }
         .channel-item.active { opacity: 1; transform: scale(1.1); }
-        .channel-logo { width: 44px; height: 44px; border-radius: 12px; border: 2.5px solid #222; margin: 0 auto 6px; background: #000; object-fit: contain; }
+        .channel-logo {
+            width: 44px; height: 44px;
+            border-radius: 12px; border: 2.5px solid #222;
+            margin-bottom: 6px; /* Solo margen abajo, el centrado lo hace flex */
+            background: #000; object-fit: contain;
+        }
         .active .channel-logo { border-color: var(--gold); }
-        .channel-name { font-size: 7px; color: #ffffff; font-weight: 800; text-transform: uppercase; }
+        .channel-name {
+            font-size: 7px; color: #ffffff; font-weight: 800; text-transform: uppercase;
+            text-align: center; /* Asegura el centrado del texto */
+            width: 100%; /* Ocupa todo el ancho de su columna */
+        }
 
-        /* TARJETAS COMPACTAS */
+        /* TARJETAS */
         .episode-card { background: var(--card); border-radius: 20px; margin-bottom: 30px; border: 1px solid #1a1a1a; overflow: hidden; }
         .cover-art { width: 100%; height: 160px; background-size: cover; background-position: center; position: relative; }
         .cover-overlay { position: absolute; inset: 0; background: transparent; display: flex; align-items: center; justify-content: center; }
         
         .btn-play-card { 
-            background-color: var(--gold) !important; 
-            border: none !important; 
-            width: 55px; height: 55px; 
-            border-radius: 50%; 
-            color: black !important; 
-            font-size: 24px; 
-            display: flex; align-items: center; justify-content: center;
+            background-color: var(--gold) !important; border: none !important; width: 55px; height: 55px; border-radius: 50%; color: black !important; font-size: 24px; display: flex; align-items: center; justify-content: center;
         }
 
         .episode-info { padding: 20px; }
@@ -191,9 +193,9 @@
 
     window.checkLogin = () => {
         const p = document.getElementById('passInput').value.toLowerCase().trim();
-        if(p === "ticoadmin" || p === "jazz2026") { localStorage.setItem('jtp_auth_sat', 'true'); location.reload(); } else { alert("Clave Incorrecta"); }
+        if(p === "ticoadmin" || p === "jazz2026") { localStorage.setItem('jtp_auth_sabado', 'true'); location.reload(); } else { alert("Clave Incorrecta"); }
     };
-    if(localStorage.getItem('jtp_auth_sat')) {
+    if(localStorage.getItem('jtp_auth_sabado')) {
         document.getElementById('login-screen').style.display = 'none';
         document.getElementById('app-content').style.display = 'block';
         isAdmin = true;
